fixed aligning of button

--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ main {
     image-rendering:pixelated;
     height: 40vh !important;
     width: auto;
-    margin: 0px auto;
+    margin: 0 auto;
 }
 
 @media only screen and (max-width: 800px) {
